# litdedup

./: AGENTS.md  README.md  main.py  pyproject.toml
src/litdedup/: __init__.py  cli.py  config.py  db.py  dedup.py  export.py  parsers.py  report.py  sampling.py
tests/: test_litdedup.py
