[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "litdedup"
version = "0.1.0"
description = "Standalone CLI for importing, cleaning, and deduplicating literature records in systematic review workflows."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "charset-normalizer>=3.4,<4",
    "pydantic>=2.9,<3",
    "rapidfuzz>=3.10,<4",
    "tqdm>=4.66,<5",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
]

[project.scripts]
litdedup = "litdedup.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
